@@ -210,7 +210,7 @@ public class DragGuidePolicy extends GraphicalEditPolicy {
 			// add the placeholder guide figure to the ruler
 			getHostFigure().getParent().add(getDummyGuideFigure(), 0);
 			((GraphicalEditPart) getHost().getParent()).setLayoutConstraint(
-					getHost(), getDummyGuideFigure(), new Integer(
+					getHost(), getDummyGuideFigure(), Integer.valueOf(
 							getGuideEditPart().getZoomedPosition()));
 			getDummyGuideFigure().setBounds(getHostFigure().getBounds());
 			getDummyGuideFigure().validate();
@@ -218,7 +218,7 @@ public class DragGuidePolicy extends GraphicalEditPolicy {
 			getGuideEditPart().getGuideLayer().add(getDummyLineFigure(), 0);
 			getGuideEditPart().getGuideLayer().setConstraint(
 					getDummyLineFigure(),
-					new Boolean(getGuideEditPart().isHorizontal()));
+					Boolean.valueOf(getGuideEditPart().isHorizontal()));
 			getDummyLineFigure().setBounds(
 					getGuideEditPart().getGuideLineFigure().getBounds());
 			getDummyLineFigure().validate();
